--- a/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
+++ b/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
@@ -7,13 +7,12 @@
             <Entry x:Name="un" Text="{Binding UserName}" Placeholder="Choose a user name"/>
             <Entry x:Name="pass" Text="{Binding Password}" IsPassword="True" Placeholder="Password"/>
             <Entry x:Name="mail" Text="{Binding Email}" Placeholder="Email"/>
-            <DatePicker x:Name="startDatePicker"
-                    Format="D"
-                    Date="{Binding BirthDate}" />
+          
             <Entry x:Name="country" Text="{Binding Country}" Placeholder="Country"/>
             <Entry x:Name="city" Text="{Binding City}" Placeholder="City"/>
-            <Entry x:Name="street" Text="{Binding Street}" Placeholder="Adress(Street + number)"/>
-            
+            <Entry x:Name="address" Text="{Binding Street}" Placeholder="Adress"/>
+
+
             <Label Text="{Binding Label}"></Label>
             <Button Text="Sign Up" Command="{Binding Register}"></Button>
 
