--- a/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
+++ b/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
@@ -5,12 +5,18 @@
     <ContentPage.Content>
         <StackLayout>
             <Entry x:Name="un" Text="{Binding UserName}" Placeholder="Choose a user name"/>
+            <Label Text="{Binding UserNameError}"></Label>
+
             <Entry x:Name="pass" Text="{Binding Password}" IsPassword="True" Placeholder="Password"/>
             <Entry x:Name="mail" Text="{Binding Email}" Placeholder="Email"/>
-          
+            <Label Text="{Binding EmailError}"/>
             <Entry x:Name="country" Text="{Binding Country}" Placeholder="Country"/>
             <Entry x:Name="city" Text="{Binding City}" Placeholder="City"/>
             <Entry x:Name="address" Text="{Binding Street}" Placeholder="Adress"/>
+            <DatePicker x:Name="startDatePicker"
+                    Format="D"
+                    Date="{Binding Birthday}" />
+            <Label Text="{Binding BirthdayError}"/>
 
 
             <Label Text="{Binding Label}"></Label>
