--- a/EcoCareApp/EcoCareApp/App.xaml
+++ b/EcoCareApp/EcoCareApp/App.xaml
@@ -24,6 +24,29 @@
                 <Setter Property="FontSize" Value="Caption" />
                 <Setter Property="FontSize" Value="Caption" />
             </Style>
+            <Style TargetType="StackLayout" x:Key="LoginStack">
+                <Setter Property="Orientation" Value="Vertical"/>
+                <Setter Property="Padding" Value="30"/>
+                <Setter Property="Spacing" Value="40"/>
+                <Setter Property="FlowDirection" Value="RightToLeft"/>
+            </Style>
+            <Style TargetType="Label" x:Key="FormTitle">
+                <Setter Property="HorizontalOptions" Value="Center"/>
+                <Setter Property="FontSize" Value="Large"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+            </Style>
+            <Style TargetType="Entry" x:Key="LoginEntry">
+                <Setter Property="PlaceholderColor" Value="White"/>
+                <Setter Property="HeightRequest" Value="40"/>
+                <Setter Property="TextColor" Value="White"/>
+            </Style>
+            <Style TargetType="Button" x:Key="LoginButton">
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="FontSize" Value="Large"/>
+                <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="BackgroundColor" Value="#088da5"/>
+            </Style>
 
         </ResourceDictionary>
     </Application.Resources>
