--- a/EcoCareApp/EcoCareApp/App.xaml
+++ b/EcoCareApp/EcoCareApp/App.xaml
@@ -5,31 +5,57 @@
     <Application.Resources>
 
         <ResourceDictionary>
+          
+           
+            <Style x:Key="title" TargetType="Label">
+                <Setter Property="FontFamily" Value="Amatic"></Setter>
+                <Setter Property="FontSize" Value="32"></Setter>
+                <Setter Property="HorizontalOptions" Value="Center"></Setter>
+            </Style>
+
+            <Style x:Key="smallerTitle" TargetType="Label">
+                <Setter Property="FontFamily" Value="Amatic"></Setter>
+                <Setter Property="FontSize" Value="28"></Setter>
+                <Setter Property="HorizontalOptions" Value="Center"></Setter>
+            </Style>
+
+            <Style x:Key="entry" TargetType="Entry">
+                <Setter Property="FontFamily" Value="Fill"></Setter>
+                <Setter Property="FontSize" Value="14"></Setter>
+            </Style>
+
+            <Style x:Key="Link" TargetType="Label">
+                <Setter Property="FontFamily" Value="Fill"></Setter>
+                <Setter Property="FontSize" Value="14"></Setter>
+                <Setter Property="TextColor" Value="Blue"></Setter>
+                <Setter Property="TextDecorations" Value="Underline"></Setter>
+            </Style>
+
+            <Style x:Key="logInSignUp" TargetType="Frame">
+                <Setter Property="BackgroundColor" Value="#dfe7fd"></Setter>
+                <Setter Property="HasShadow" Value="true"></Setter>
+                <Setter Property="CornerRadius" Value="10"></Setter>
+            </Style>
+
             <Style x:Key="labelNameStyle" TargetType="Label">
                 <Setter Property="FontSize" Value="Small" />
             </Style>
             <Style x:Key="labelErrorStyle" TargetType="Label">
                 <Setter Property="HorizontalOptions" Value="End" />
-                <Setter Property="TextColor" Value="Red" />
-                <Setter Property="FontSize" Value="Small" />
+                <Setter Property="VerticalOptions" Value="End" />
+                <Setter Property="TextColor" Value="#e63946" />
+                <Setter Property="FontSize" Value="14" />
             </Style>
-            <Style x:Key="entryStyle" TargetType="Entry">
-                <Setter Property="HorizontalOptions" Value="Fill" />
-            </Style>
-            <Style x:Key="labelTableStyle" TargetType="Label">
-                <Setter Property="VerticalTextAlignment" Value="Center" />
-                <Setter Property="HorizontalTextAlignment" Value="Center" />
-                <Setter Property="FontSize" Value="Caption" />
-                <Setter Property="FontSize" Value="Caption" />
-                <Setter Property="FontSize" Value="Caption" />
-                <Setter Property="FontSize" Value="Caption" />
-            </Style>
-            <Style TargetType="StackLayout" x:Key="LoginStack">
+
+
+
+            <Style TargetType="StackLayout" x:Key="Stack">
                 <Setter Property="Orientation" Value="Vertical"/>
                 <Setter Property="Padding" Value="30"/>
                 <Setter Property="Spacing" Value="40"/>
-                <Setter Property="FlowDirection" Value="RightToLeft"/>
+                <!-- <Setter Property="FlowDirection" Value="RightToLeft"/> -->
             </Style>
+
             <Style TargetType="Label" x:Key="FormTitle">
                 <Setter Property="HorizontalOptions" Value="Center"/>
                 <Setter Property="FontSize" Value="Large"/>
@@ -40,14 +66,14 @@
                 <Setter Property="HeightRequest" Value="40"/>
                 <Setter Property="TextColor" Value="White"/>
             </Style>
-            <Style TargetType="Button" x:Key="LoginButton">
+            <Style TargetType="Button" x:Key="Button">
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="FontSize" Value="Large"/>
                 <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
                 <Setter Property="TextColor" Value="White"/>
-                <Setter Property="BackgroundColor" Value="#088da5"/>
+                <Setter Property="BackgroundColor" Value="#CAAFEA"/>
+                <Setter Property="CornerRadius" Value="10"></Setter>
             </Style>
-
         </ResourceDictionary>
     </Application.Resources>
 </Application>
